Bug 14348 - memleak in ctdb_recoverd
Summary: memleak in ctdb_recoverd
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-16 13:55 UTC by Volker Lendecke
Modified: 2020-05-05 06:33 UTC (History)
1 user (show)

See Also:


Attachments
Patch (1.02 KB, patch)
2020-04-17 08:38 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2020-04-16 13:55:12 UTC

    
Comment 1 Volker Lendecke 2020-04-17 08:38:21 UTC
Created attachment 15928 [details]
Patch

Applies cleanly back to 4.9
Comment 2 Ralph Böhme 2020-04-17 08:52:56 UTC
Reassigning to Karolin for inclusion in 4.11 and 4.12.
Comment 3 Karolin Seeger 2020-04-21 08:08:00 UTC
Pushed to autobuild-v4-{12,11}-test.
Comment 4 Karolin Seeger 2020-05-05 06:33:39 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!